--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- include dependencies manually -->
+    <link href="path/to/node_modules/normalize.css/normalize.css" rel="stylesheet" />
+    <link href="path/to/node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet" />
+    <link href="path/to/node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css" rel="stylesheet" />
+    <!-- NOTE: blueprint-icons.css file must be included alongside blueprint.css! -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
